<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presetation.find_user.MainActivity">

    <TextView
        android:id="@+id/welcome_note"
        android:textColor="@android:color/black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="20dp"
        android:text="@string/welcome_note"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/home_image_logo"/>

    <ImageView
        android:id="@+id/home_image_logo"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/ic_twitter_logo"
        android:contentDescription="@string/twitter_logo_content_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_note" />

    <TextView
        android:id="@+id/home_label"
        android:textColor="@android:color/black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:gravity="center"
        android:text="@string/home_label_message"
        app:layout_constraintBottom_toTopOf="@id/home_et_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_image_logo" />

    <EditText
        android:id="@+id/home_et_username"
        android:layout_width="226dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="3dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_shape"
        android:drawableStart="@drawable/ic_at"
        android:hint="@string/hint"
        android:inputType="text"
        android:paddingStart="0dp"
        android:paddingTop="10dp"
        android:paddingEnd="0dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_label" />

    <Button
        android:id="@+id/home_btn_search_user"
        android:layout_width="0dp"
        android:layout_height="43.5dp"
        android:text="@string/button_search_user"
        android:background="@drawable/rounded_corner"
        android:textColor="@color/text_color"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/home_et_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>